# teraflop

./: .gitignore  CMakeLists.txt
src/: core_game.hpp  log.c  log.h  main.cpp  main.hpp  main_menu.cpp  main_menu.hpp  save_manager.cpp  save_manager.hpp  teracurses.cpp  teracurses.hpp  universal_structures.hpp
